--- a/ParametricBox/cs/Box/Properties/Resources.resx
+++ b/ParametricBox/cs/Box/Properties/Resources.resx
@@ -118,10 +118,19 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <assembly alias="System.Windows.Forms" name="System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
-  <data name="box_icon" type="System.Resources.ResXFileRef, System.Windows.Forms">
+  <data name="box-icon" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\box-icon.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="height_icon" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\height-icon.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="length_icon" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\length-icon.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="parametric-box-icon" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\parametric-box-icon.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="width_icon" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\width-icon.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
 </root>
